--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -9,18 +9,21 @@
 
 
 
-@book{ibge1993,
-	Address = {Rio de Janeiro},
-	Author = {IBGE},
-	Date-Added = {2013-08-21 13:56:10 +0000},
-	Date-Modified = {2013-08-21 13:56:10 +0000},
-	Edition = {3},
-	Organization = {http://biblioteca.ibge.gov.br/visualizacao/livros/liv23907.pdf},
-	Publisher = {Centro de Documenta{\c c}{\~a}o e Dissemina{\c c}{\~a}o de Informa{\c c}{\~o}es. Funda{\c c}{\~a}o Intituto Brasileiro de Geografia e Estat{\'\i}stica},
-	Title = {Normas de apresenta{\c c}{\~a}o tabular},
-	Urlaccessdate = {21 ago 2013},
-	Year = {1993}}
 
+@misc{psim,
+    Title = {Software PSIM},
+    URL = {https://powersimtech.com/products/psim/}
+}
+    
+@misc{microcap,
+    Title = {Micro-cap},
+    URL = {http://www.spectrum-soft.com/index.shtm}
+}
+
+@misc{kicad,
+    Title = {kicad},
+    URL = http://kicad-pcb.org/
+}
 @misc{abntex2-wiki-como-customizar,
 	Author = {Lauro C{\'e}sar Araujo},
 	Date-Added = {2013-03-23 21:39:21 +0000},
