--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -22,7 +22,7 @@
 
 @misc{kicad,
     Title = {kicad},
-    URL = http://kicad-pcb.org/
+    URL = {http://kicad-pcb.org/}
 }
 @misc{abntex2-wiki-como-customizar,
 	Author = {Lauro C{\'e}sar Araujo},
