--- a/conteudo.tex
+++ b/conteudo.tex
@@ -114,6 +114,8 @@ Para o projeto da PCI, foi utilizado o software KiCAd\cite{kicad}. Nos era propo
 Na bottom layer, vemos que não temos uma rota para o ground, isso ocorre porque ela é uma zona preenchida \textit{gnd} assim, só é necessário o ponto de soldagem no capacitor e no resistor para eles estarem conectados ao ground.
 
 %-
-%	Conclusão
+%	 Dimensionamento Térmico de um Dissipador 
 %
 %
+\chapter{Dimensionamento Térmico de um Dissipador}
+
