--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -24,6 +24,11 @@
     Title = {kicad},
     URL = {http://kicad-pcb.org/}
 }
+
+@misc{datasheet,
+    Title ={Datasheet CI LM7805},
+    URL = {http://ee-classes.usc.edu/ee459/library/datasheets/LM7805.pdf}
+}
 @misc{abntex2-wiki-como-customizar,
 	Author = {Lauro C{\'e}sar Araujo},
 	Date-Added = {2013-03-23 21:39:21 +0000},
